Implement read-only attributes.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,9 @@ Style/ClassAndModuleChildren:
 Style/DotPosition:
   EnforcedStyle: trailing
 
+Style/DoubleNegation:
+  Enabled: false
+
 Style/EmptyLineBetweenDefs:
   AllowAdjacentOneLineDefs: true
 
