Fix behavior of Query#pluck with a transform.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,11 @@ Metrics/ModuleLength:
   Exclude:
     - 'spec/**/*.rb'
 
+Performance/RedundantBlockCall:
+  # Incompatible with documentation/testing requirement of explicitly defining
+  # a block argument.
+  Enabled: false
+
 Style/Alias:
   EnforcedStyle: prefer_alias_method
 
