--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,3 +59,7 @@ Style/NestedParenthesizedCalls:
 Style/NumericLiterals:
   Exclude:
     - 'spec/**/*.rb'
+
+Style/SingleLineBlockParams:
+  # Prefer descriptive block param names.
+  Enabled: false
