Add MongoDB 3 Haddon to Travis-CI build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ cache: bundler
 sudo:  false # Enable containerized builds.
 services:
 - mongodb
+addons:
+  apt:
+    sources:
+    - mongodb-3.0-precise
+    packages:
+    - mongodb-org-server
