--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
 before_script:
 - cp .rspec.example .rspec
 script:
-- bundle exec thor bronze:ci:default
+- bundle exec thor ci:steps
 
 # Travis-CI Configuration
 cache: bundler
