Update RuboCop to 0.49.0.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,20 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
 
+Layout/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
+  IndentationWidth: ~
+
+Layout/DotPosition:
+  EnforcedStyle: trailing
+
+Layout/EmptyLineBetweenDefs:
+  AllowAdjacentOneLineDefs: true
+
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - 'spec/**/*.rb'
+
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
@@ -24,10 +38,6 @@ Performance/RedundantBlockCall:
 Style/Alias:
   EnforcedStyle: prefer_alias_method
 
-Style/AlignParameters:
-  EnforcedStyle: with_fixed_indentation
-  IndentationWidth: ~
-
 Style/ClassAndModuleChildren:
   # Checks the style of children definitions at classes and modules.
   #
@@ -35,14 +45,12 @@ Style/ClassAndModuleChildren:
   # existing styles, so we disable this cop.
   Enabled: false
 
-Style/DotPosition:
-  EnforcedStyle: trailing
-
 Style/DoubleNegation:
   Enabled: false
 
-Style/EmptyLineBetweenDefs:
-  AllowAdjacentOneLineDefs: true
+Style/FileName:
+  Exclude:
+    - 'Gemfile'
 
 Style/FrozenStringLiteralComment:
   # Incompatible with file location comments.
@@ -66,6 +74,9 @@ Style/NumericLiterals:
 
 Style/SingleLineBlockParams:
   # Prefer descriptive block param names.
+  Enabled: false
+
+Style/SymbolArray:
   Enabled: false
 
 Style/TrailingUnderscoreVariable:
