--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -57,7 +57,8 @@ Style/FrozenStringLiteralComment:
   Enabled: false
 
 Style/HashSyntax:
-  EnforcedStyle: hash_rockets
+  # Disabled while transitioning to modern syntax.
+  Enabled: false
 
 Style/MethodDefParentheses:
   EnforcedStyle: require_no_parentheses_except_multiline
