--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,8 @@ Layout/AlignParameters:
   IndentationWidth: ~
 
 Layout/DotPosition:
-  EnforcedStyle: trailing
+  # Disabled while transitioning to modern syntax.
+  Enabled: false
 
 Layout/EmptyLineBetweenDefs:
   AllowAdjacentOneLineDefs: true
@@ -61,7 +62,8 @@ Style/HashSyntax:
   Enabled: false
 
 Style/MethodDefParentheses:
-  EnforcedStyle: require_no_parentheses_except_multiline
+  # Disabled while transitioning to modern syntax.
+  Enabled: false
 
 Style/NestedParenthesizedCalls:
   # This cop is excessively strict, especially in cases where the nested method
