--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@ require:
   - ./spec/support/rubocop_patch
 
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 2.3
   Include:
     - 'lib/**/*.rb'
     - 'lib/**/*.thor'
@@ -11,6 +11,9 @@ AllCops:
   Exclude:
     - 'tmp/**/*'
     - 'vendor/**/*'
+
+Layout/AlignHash:
+  EnforcedColonStyle: table
 
 Layout/AlignParameters:
   EnforcedStyle: with_fixed_indentation
