--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
 
 Layout/AlignHash:
   EnforcedColonStyle: table
+  EnforcedHashRocketStyle: table
 
 Layout/AlignParameters:
   EnforcedStyle: with_fixed_indentation
