--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,10 @@ Performance/RedundantBlockCall:
 RSpec/ExampleWording:
   Enabled: false
 
+RSpec/FilePath:
+  Exclude:
+    - spec/integration/**/*.rb
+
 RSpec/HookArgument:
   Enabled: false
 
