--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,6 +47,9 @@ RSpec/FilePath:
 RSpec/HookArgument:
   Enabled: false
 
+RSpec/NestedGroups:
+  Max: 4
+
 Style/Alias:
   EnforcedStyle: prefer_alias_method
 
