--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,9 @@ Metrics/ModuleLength:
   Exclude:
     - 'spec/**/*.rb'
 
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
 Naming/FileName:
   Exclude:
     - 'Gemfile'
